--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,8 +1,8 @@
 @use "./base/reset";
 @use "./base/base";
 
-*,
-*::before,
-*::after {
-    outline: 1px dotted rgba(red, 0.3);
-}
+// *,
+// *::before,
+// *::after {
+//     outline: 1px dotted rgba(red, 0.3);
+// }
